--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
     "typescript": "~5.9.2",
     "typescript-eslint": "8.46.4"
   },
+  "overrides": {
+    "tar": "^7.5.9",
+    "qs": "^6.15.0"
+  },
   "lint-staged": {
     "*.{ts,html,scss,css,json,md}": [
       "prettier --write"
